--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
 config.env
+Thumbnails/*
+list_drives.txt
+categories.txt
+cookies.txt
+terabox.txt
+downloads
 *auth_token.txt
 *.pyc
 data*
@@ -8,17 +14,7 @@ data*
 *.pickle
 .netrc
 log.txt
+authorized_chats.txt
+sudo_users.txt
 accounts/*
-Thumbnails/*
-drive_folder
-cookies.txt
-terabox.txt
-accounts.zip
-rcl.conf
-fish/*
-list_drives.txt
-downloads
-bot.session
-user.session
-buttons.txt
-shorteners.txt
+cookies/*
