--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,8 +17,9 @@ jobs:
           stack: "container"
           region: "us"
         env:
-          HD_OWNER_ID: ${{secrets.OWNER_ID}}
-          HD_TELEGRAM_API: ${{secrets.TELEGRAM_API}}
-          HD_TELEGRAM_HASH: ${{secrets.TELEGRAM_HASH}}
-          HD_DATABASE_URL: ${{secrets.DATABASE_URL}}
-          HD_BOT_TOKEN: ${{secrets.BOT_TOKEN}}
+          HD_CONFIG_FILE_URL: ${{secrets.CONFIG_FILE_URL}}
+          #HD_OWNER_ID: ${{secrets.OWNER_ID}}
+          #HD_TELEGRAM_API: ${{secrets.TELEGRAM_API}}
+          #HD_TELEGRAM_HASH: ${{secrets.TELEGRAM_HASH}}
+          #HD_DATABASE_URL: ${{secrets.DATABASE_URL}}
+          #HD_BOT_TOKEN: ${{secrets.BOT_TOKEN}}
